
ADD_LIBRARY ( PyIex STATIC
	PyIex.cpp
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iexmodule ${LIB_TYPE}
	iexmodule.cpp
)

SET_TARGET_PROPERTIES ( iexmodule
	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
)

IF (WINDOWS)
    ADD_DEFINITIONS(
        -DHAVE_ROUND
    	-DPYIEX_EXPORTS
    	-DBOOST_PYTHON_STATIC_LIB)
ENDIF()

TARGET_LINK_LIBRARIES ( iexmodule
	PyIex
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS iexmodule
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

